# arc-agi-3-pre

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-kaggle.txt
docs/: baseline-1-sg-port.md  baseline-2-forge-bfs.md  baseline-routes.md  cloud-gpu-setup.md  day1-enhancements.md  kaggle-notebook-setup.md  kaggle-submission.md  kaggle-submit-howto.md  reproduce-sg.md  sdk-notes.md  sg-port-status.md
notebooks/: benchmark_p100.ipynb  sg_submit.py  submit_bfs.ipynb  submit_sg.ipynb
scripts/: benchmark.py  bfs_benchmark.py  dump_catalog.py  inspect_env.py  quickstart.py  run_sg.py  train_sg.py
src/agents/: bfs_solver.py  sg_baseline.py  sg_kaggle_agent.py  sg_tabular_agent.py
src/arc_agi_3/: __init__.py  baseline.py  cli.py  effects.py  events.py  features.py  hypotheses.py  official_agent.py
src/perception/: segmenter.py
