[project]
name = "arc-agi-3-pre"
version = "0.1.0"
description = "ARC Prize 2026 - ARC-AGI-3 pre-research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arc-agi>=0.9.8",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "torch>=2.4.0",
    "tensorboard>=2.17.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
